# code-exe-agent

./: .gitignore  INSTALL_WINDOWS.txt  QUICKSTART.md  README.md  WEB_UI_GUIDE.md  add_meta.md  agent_cli.py  main.py  pyproject.toml  run.bat  start_web.bat  start_web.sh  web_ui.py  workflow_cli.py
.claude/: settings.local.json
config/: categories.json  mcp_servers.json
docs/examples/: usage.md
docs/guides/: agent_guide.md  configuration.md
docs/windows/: INSTALL.md  START_HERE.md  cheatsheet.md  quickstart.md  troubleshooting.md
examples/: agent_usage.py  workflow_demo.py
scripts/windows/: diagnose.ps1  quick-generate.bat  run.bat  run.ps1  setup.bat  setup.ps1
src/: workflow.py
src/agent/: __init__.py  code_executor.py  code_generator.py  mcp_agent.py  tool_executor.py
src/generator/: __init__.py  categorizer.py  file_generator.py  mcp_client.py
src/templates/: category_readme.md.j2  tool_wrapper.ts.j2
templates/: category_readme.md.j2  tool_wrapper.ts.j2
